@@ -2,7 +2,11 @@
 
 {{$NEXT}}
 
+*  Documentation for all methods
+
+
+
 1.000 2016-02-28T21:37:22Z
 
-    - original version
+* Original version
 
